### Added


### Changed
- Removed the normalization done at the protein level in labelquant
- Improved the protein filter for small scale analyses

### Fixed
- Adjusted the msstats file format, added Purity to all plex sizes
- Fixed the protein coverage calculations
- Fixed repeated isobaric values that would eventually show up in the protein table